# bugtracker

./: LICENSE  README.md  package-lock.json  pyproject.toml
auth/: apps.py  forms.py  views.py
bugtracker/: asgi.py  settings.py  urls.py  wsgi.py
custom_user/: models.py  views.py
custom_user/migrations/: 0001_initial.py
dashboard/: apps.py  views.py
templates/: form.html  index.html  ticket_detail.html  user_detail.html
tickets/: forms.py  models.py  views.py
tickets/migrations/: 0001_initial.py  0002_auto_20210705_1918.py
