[tool.poetry]
name = "bugtracker-dbobbgit"
version = "0.1.0"
description = ""
authors = ["Danielle Bobb <danielle@oakandivymedia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
autopep8 = "^1.5.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
